WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206537
DLLLauncherMain print to console instead of opening window on fatal error
https://bugs.webkit.org/show_bug.cgi?id=206537
Summary
DLLLauncherMain print to console instead of opening window on fatal error
me
Reported
2020-01-21 08:30:32 PST
DLLLauncherMain print to console instead of opening window on fatal error
Attachments
Patch
(4.39 KB, patch)
2020-01-21 08:30 PST
,
me
no flags
Details
Formatted Diff
Diff
Patch
(1.44 KB, patch)
2020-01-21 08:37 PST
,
me
no flags
Details
Formatted Diff
Diff
Patch
(1.44 KB, patch)
2020-01-21 08:40 PST
,
me
no flags
Details
Formatted Diff
Diff
Patch
(1.64 KB, patch)
2020-01-21 08:48 PST
,
me
no flags
Details
Formatted Diff
Diff
Patch
(1.46 KB, patch)
2020-01-21 08:59 PST
,
me
no flags
Details
Formatted Diff
Diff
Patch
(2.80 KB, patch)
2020-04-05 22:16 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
me
Comment 1
2020-01-21 08:30:53 PST
Created
attachment 388299
[details]
Patch
me
Comment 2
2020-01-21 08:37:00 PST
Created
attachment 388300
[details]
Patch
me
Comment 3
2020-01-21 08:40:25 PST
Created
attachment 388303
[details]
Patch
me
Comment 4
2020-01-21 08:48:52 PST
Created
attachment 388304
[details]
Patch
me
Comment 5
2020-01-21 08:59:35 PST
Created
attachment 388305
[details]
Patch
Ross Kirsling
Comment 6
2020-01-21 14:12:55 PST
Comment on
attachment 388305
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388305&action=review
Nice! I hadn't thought of this approach. Can you also apply this change to the other copy of DLLLauncherMain (which we use for all executables other than JSC shell)?
https://github.com/WebKit/webkit/blob/master/Tools/win/DLLLauncher/DLLLauncherMain.cpp
> Source/JavaScriptCore/shell/DLLLauncherMain.cpp:113 > + fprintf(stderr, "%s %s\n", caption.c_str(), message.c_str());
Our Windows code uses wide-character strings, so let's do this: fwprintf(stderr, L"%s\n%s\n", caption.c_str(), message.c_str());
> Source/JavaScriptCore/shell/DLLLauncherMain.cpp:114 > + exit(1);
This shouldn't be necessary; whatever is calling this should just exit with the returned 1.
Alex Christensen
Comment 7
2020-01-21 14:38:58 PST
Comment on
attachment 388305
[details]
Patch I like this too, but r- to address Ross's comments.
Ross Kirsling
Comment 8
2020-04-05 22:16:20 PDT
Created
attachment 395544
[details]
Patch
EWS
Comment 9
2020-04-05 23:02:12 PDT
Committed
r259565
: <
https://trac.webkit.org/changeset/259565
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395544
[details]
.
Radar WebKit Bug Importer
Comment 10
2020-04-05 23:03:15 PDT
<
rdar://problem/61330298
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug