DLLLauncherMain print to console instead of opening window on fatal error https://bugs.webkit.org/show_bug.cgi?id=206537

Reviewed by Fujii Hironori.

Source/JavaScriptCore:

* shell/DLLLauncherMain.cpp:
(fatalError):

Tools:

* win/DLLLauncher/DLLLauncherMain.cpp:
(fatalError):


Canonical link: https://commits.webkit.org/222956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259565 268f45cc-cd09-0410-ab3c-d52691b4dbfc