Tools/win/DLLLauncher/DLLLauncherMain.cpp
@@ -96,7 +96,11 @@ static bool prependPath(const wstring& directoryToPrepend)
 static int fatalError(const wstring& programName, const wstring& message)
 {
     wstring caption = programName + L" can't open.";
+#if USE_CONSOLE_ENTRY_POINT
+    fwprintf(stderr, L"%s\n%s\n", caption.c_str(), message.c_str());
+#else
     ::MessageBoxW(0, message.c_str(), caption.c_str(), MB_ICONERROR);
+#endif
     return 1;
 }
 
